--- a/notebooks/nuscenes_lidarseg_panoptic_tutorial.ipynb
+++ b/notebooks/nuscenes_lidarseg_panoptic_tutorial.ipynb
@@ -69,10 +69,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir -p ../data/nuscenes  # Make the directory to store the nuScenes dataset in.\n",
+    "# !mkdir -p ../data/nuscenes  # Make the directory to store the nuScenes dataset in.\n",
     "\n",
-    "# !wget https://www.nuscenes.org/data/v1.0-mini.tgz  # Download the nuScenes mini split.\n",
-    "# !wget https://www.nuscenes.org/data/nuScenes-lidarseg-mini-v1.0.tar.bz2  # Download the nuScenes-lidarseg mini split.\n",
+    "!wget https://www.nuscenes.org/data/v1.0-mini.tgz  # Download the nuScenes mini split.\n",
+    "!wget https://www.nuscenes.org/data/nuScenes-lidarseg-mini-v1.0.tar.bz2  # Download the nuScenes-lidarseg mini split.\n",
     "\n",
     "!tar -xf v1.0-mini.tgz -C ../data/nuscenes  # Uncompress the nuScenes mini split.\n",
     "!tar -xf nuScenes-lidarseg-mini-v1.0.tar.bz2 -C ../data/nuscenes   # Uncompress the nuScenes-lidarseg mini split.\n",
